[gd_scene load_steps=2 format=3 uid="uid://5qmvhqorv3gl"]

[ext_resource type="Script" uid="uid://cscpxvc716x13" path="res://Scripts/Structures/clickable_area.gd" id="1_il1w6"]

[node name="ClickableArea" type="Area2D"]
script = ExtResource("1_il1w6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
